fix make, github actions

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install, build
         run: 
-          make install
+          make ci
         env:
           CI: true
       - name: Run linter
